<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_form"
            style="@style/textStyle.header"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsername"
            android:hint="@string/masukkan_username"
            android:layout_marginTop="16dp"
            style="@style/editTextStyle"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/masukkan_password"
            android:layout_marginTop="16dp"
            style="@style/editTextStyle.password"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbShowPassword"
            android:text="@string/show_password"
            android:onClick="showHidePassword"
            style="@style/textStyle.cbStyle"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/sign_in_text"
            android:onClick="verifikasi"
            android:layout_marginTop="8dp"
            />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>